--- a/day2-lunch/Mapping FlyBase genes to UniProt.ipynb
+++ b/day2-lunch/Mapping FlyBase genes to UniProt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,6 +20,7 @@
     "    uni = fields[2]\n",
     "    fb = fields[3]\n",
     "    ID[fb] = uni\n",
+    "\n",
     "for fb, uni in ID.items():\n",
     "    fn.write(str(fb)+ '\\t' + str(uni) + '\\n')\n",
     "\n",
@@ -33,19 +34,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['FBgn0030087', 'Q9W391']\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list assignment index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-80de88af451f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0;31m#print(fb)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mfb\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mfd\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m              \u001b[0mlist2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfd\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfb\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list assignment index out of range"
+     ]
+    }
+   ],
    "source": [
     "f1 = open('../../qbb2020-answers/day2-lunch/ID.txt', 'r')\n",
     "f2 = open('../../data/results/stringtie/SRR072893/t_data.ctab', 'r')\n",
     "\n",
-    "def mapper(f1, f2, gene_id):\n",
-    "    f1d = {}\n",
-    "    for line in f1:\n",
-    "        (fb, uni) = line.split('/t')\n",
-    "        f1d[fb] = uni\n",
-    "    print(f1d)\n",
+    "#def mapper(f1, f2):\n",
+    "fd = {}\n",
+    "for line in f1:\n",
+    "    list1= line.split()\n",
+    "    fd[list1[0]] = list1[1]\n",
+    "for line2 in f2:\n",
+    "    if 'FBgn' in line2:\n",
+    "        list2 = line.split()\n",
+    "        print(list2)\n",
+    "        fb= list2[0]\n",
+    "        #print(fb)\n",
+    "        if fb in fd:\n",
+    "             list2[0] = fd[fb]\n",
+    "                \n",
+    "\n",
+    "                \n",
     "        \n",
     "\n",
     "            \n",
