--- a/day2-lunch/Mapping FlyBase genes to UniProt.ipynb
+++ b/day2-lunch/Mapping FlyBase genes to UniProt.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -33,47 +40,50 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['FBgn0030087', 'Q9W391']\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list assignment index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-80de88af451f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0;31m#print(fb)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mfb\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mfd\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m              \u001b[0mlist2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfd\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfb\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list assignment index out of range"
-     ]
-    }
-   ],
    "source": [
-    "f1 = open('../../qbb2020-answers/day2-lunch/ID.txt', 'r')\n",
-    "f2 = open('../../data/results/stringtie/SRR072893/t_data.ctab', 'r')\n",
+    "# Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mapper(f1, f2):\n",
+    "    f1 = open('../../qbb2020-answers/day2-lunch/ID.txt', 'r')\n",
+    "    f2 = open('../../data/results/stringtie/SRR072893/t_data.ctab', 'r')\n",
+    "    f3 = open('../../qbb2020-answers/day2-lunch/UniProt.txt', 'w')\n",
     "\n",
-    "#def mapper(f1, f2):\n",
-    "fd = {}\n",
-    "for line in f1:\n",
-    "    list1= line.split()\n",
-    "    fd[list1[0]] = list1[1]\n",
-    "for line2 in f2:\n",
-    "    if 'FBgn' in line2:\n",
-    "        list2 = line.split()\n",
-    "        print(list2)\n",
-    "        fb= list2[0]\n",
-    "        #print(fb)\n",
-    "        if fb in fd:\n",
-    "             list2[0] = fd[fb]\n",
-    "                \n",
+    "    counter = 0\n",
+    "    fd = {}\n",
+    "    \n",
+    "    for line in f1:\n",
+    "        if 'FBgn'in line:\n",
+    "            list1= line.split()\n",
+    "            fd[list1[0]] = list1[1]\n",
+    "    for line2 in f2:\n",
+    "        if 'FBgn' in line2:\n",
+    "            if counter < 100:\n",
+    "                list2 = line2.split()\n",
+    "                fb = list2[-4]\n",
+    "                if fb in fd:\n",
+    "                    list2[-4]=fd[fb]\n",
+    "                    f3.write('\\t'.join(list2) + '\\n')\n",
+    "                    counter += 1\n",
+    "    f1.close()\n",
+    "    f2.close()\n",
+    "    f3.close()\n",
+    "    return\n",
+    "\n",
+    "\n",
+    "\n",
+    "   \n",
+    "    \n",
+    "        \n",
+    "             \n",
     "\n",
     "                \n",
     "        \n",
@@ -81,6 +91,15 @@
     "            \n",
     "        \n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mapper(f1,f2)"
    ]
   },
   {
