Added third argument

--- a/day2-lunch/Mapping FlyBase genes to UniProt.ipynb
+++ b/day2-lunch/Mapping FlyBase genes to UniProt.ipynb
@@ -48,14 +48,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mapper(f1, f2):\n",
-    "    f1 = open('../../qbb2020-answers/day2-lunch/ID.txt', 'r')\n",
-    "    f2 = open('../../data/results/stringtie/SRR072893/t_data.ctab', 'r')\n",
-    "    f3 = open('../../qbb2020-answers/day2-lunch/UniProt.txt', 'w')\n",
+    "f_mapping = '../../qbb2020-answers/day2-lunch/ID.txt'\n",
+    "f_ctab = '../../data/results/stringtie/SRR072893/t_data.ctab'\n",
+    "f_trans = '../../qbb2020-answers/day2-lunch/UniProt.txt'\n",
+    "\n",
+    "def mapper(f_mapping, f_ctab, none= 'NONE' == False):\n",
+    "    f1 = open(f_mapping, 'r')\n",
+    "    f2 = open(f_ctab, 'r')\n",
+    "    f3 = open(f_trans, 'w')\n",
     "\n",
     "    counter = 0\n",
     "    fd = {}\n",
@@ -72,7 +76,14 @@
     "                if fb in fd:\n",
     "                    list2[-4]=fd[fb]\n",
     "                    f3.write('\\t'.join(list2) + '\\n')\n",
-    "                    counter += 1\n",
+    "                    counter =+1\n",
+    "                elif none== True:\n",
+    "                    list2[-4]= 'None'\n",
+    "                    f3.write('\\t'.join(list2) + '\\n') \n",
+    "                    counter =+1\n",
+    "                else :\n",
+    "                    pass\n",
+    "\n",
     "    f1.close()\n",
     "    f2.close()\n",
     "    f3.close()\n",
@@ -95,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,9 +115,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "mapper(f1,f2, none = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
