--- a/day2-lunch/Mapping FlyBase genes to UniProt.ipynb
+++ b/day2-lunch/Mapping FlyBase genes to UniProt.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,14 +76,12 @@
     "                if fb in fd:\n",
     "                    list2[-4]=fd[fb]\n",
     "                    f3.write('\\t'.join(list2) + '\\n')\n",
-    "                    counter =+1\n",
     "                elif none== True:\n",
     "                    list2[-4]= 'None'\n",
     "                    f3.write('\\t'.join(list2) + '\\n') \n",
-    "                    counter =+1\n",
     "                else :\n",
     "                    pass\n",
-    "\n",
+    "            counter += 1\n",
     "    f1.close()\n",
     "    f2.close()\n",
     "    f3.close()\n",
@@ -106,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
