--- a/day2-lunch/Mapping FlyBase genes to UniProt.ipynb
+++ b/day2-lunch/Mapping FlyBase genes to UniProt.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
     "f_ctab = '../../data/results/stringtie/SRR072893/t_data.ctab'\n",
     "f_trans = '../../qbb2020-answers/day2-lunch/UniProt.txt'\n",
     "\n",
-    "def mapper(f_mapping, f_ctab, none= 'NONE' == False):\n",
+    "def mapper(f_mapping, f_ctab, none = False):\n",
     "    f1 = open(f_mapping, 'r')\n",
     "    f2 = open(f_ctab, 'r')\n",
     "    f3 = open(f_trans, 'w')\n",
@@ -104,20 +104,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mapper(f1,f2)"
+    "mapper(f_mapping, f_ctab)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mapper(f1,f2, none = True)"
+    "mapper(f_mapping, f_ctab, none = True)"
    ]
   },
   {
